top banner added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Honda Cbr</title>
   </head>
   <body>
+    <!-- Navbar -->
    
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top px-4 fs-5 fw-bold pt-4">
         <div class="container-fluid">
@@ -48,7 +49,47 @@
         </div>
       </nav>
     
-
+<!-- Banner -->
+<div class="top-banner d-flex justify-content-center align-items-center vh-100">
+    <div class="row container flex-lg-row flex-sm-column-reverse banner px-5 ">
+      <div class="col-lg-7 d-flex align-items-center flex-lg-row flex-sm-column-reverse">
+        <div class="banner-content mt-sm-5 text-light pb-sm-2">
+          <p>Computer-controlled digital transistorized with electronic advance.</p>
+          <h1>Honda CBR 300R</h1>
+          <h6 class="py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid veritatis sit optio quibusdam ratione? Autem!</h6>
+          <!-- Button trigger modal -->
+  <button type="button" class="btn bg-tomato" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Purchase
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade text-dark" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title fw-bold" id="exampleModalLabel">Honda CBR150R Highlights</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Honda has confirmed that it is investigating the 150cc segment and that it will make an announcement sooner or later. We believe the Honda CBR150R is incoming</p>
+         
+        </div>
+        <div class="modal-footer ">
+          <button type="button" class="btn bg-tomato fw-bold" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+        </div>
+      </div>
+      <div class="col-lg-5">
+        <div class="banner-image">
+          <img width="350px" class="img-fluid" src="./images/header-bike.png" alt="Honda CBR 165Cc">
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
 
 
