fetured section title added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
     </div>
   </div>
   
+  <!-- Featured Bike -->
 
+  <div class="featured-bike py-4">
+    <div class="section-title text-center">
+        <h1 class="fw-bold">Fetured Bikes 2022</h1>
+        <h6 class="text-tomato">Best Bike Collection</h6>
+    </div>
+  </div>
 
 
     <!-- Bootstrap Bundle with Popper -->
