--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Navbar -->
    
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top px-4 fs-5 fw-bold pt-4">
+    <nav class="navbar navbar-expand-lg navbar-light text-dark fixed-top px-4 fs-5 fw-bold pt-4">
         <div class="container-fluid">
           
           <button class="navbar-toggler  " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,18 +28,18 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shop</a>
+                <a class="nav-link" href="#shop">Shop</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">News</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item pb-sm-3">
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
-              <div>
+              <div">
                 <button type="button" class="btn bg-tomato fs-5 fw-bold ms-lg-5">
                   Login
                 </button>
@@ -50,7 +50,7 @@
       </nav>
     
 <!-- Banner -->
-<div class="top-banner d-flex justify-content-center align-items-center vh-100">
+<div class="top-banner d-flex justify-content-center align-items-center vh-100" id="home">
     <div class="row container flex-lg-row flex-sm-column-reverse banner px-5 ">
       <div class="col-lg-7 d-flex align-items-center flex-lg-row flex-sm-column-reverse">
         <div class="banner-content mt-sm-5 text-light pb-sm-2">
@@ -92,12 +92,77 @@
   
   <!-- Featured Bike -->
 
-  <div class="featured-bike py-4">
+
+  <section class="container mt-5" id="shop">
     <div class="section-title text-center">
+      <h1 class="fw-bold">Fetured Bikes 2022</h1>
+      <h6 class="text-tomato">Best Bike Collection</h6>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
+      <div class="col">
+        <div class="px-3">
+          <img width="300px" src="./images/feature-bike.jpg" class="img-fluid " alt="...">
+        </div>
+      </div>
+        <div class="col">
+          <div class="px-3">
+            <img width="300px" src="./images/feature-bike.jpg" class="img-fluid " alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="px-3">
+            <img width="300px" src="./images/feature-bike.jpg" class="img-fluid " alt="...">
+          </div>
+        </div>
+      </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <section class="featured-bike py-4 w-100">
+    <div class="section-title text-center container ">
         <h1 class="fw-bold">Fetured Bikes 2022</h1>
         <h6 class="text-tomato">Best Bike Collection</h6>
     </div>
-  </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="feature-image">
+          <img width="300px" class="img-fluid" src="./images/./image/feature-bike.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="feature-image">
+          <img width="300px" class="img-fluid" src="./images/./image/feature-bike.jpg" alt="">
+        </div>
+      </div><div class="col-lg-4">
+        <div class="feature-image">
+          <img width="300px" class="img-fluid" src="./images/./image/feature-bike.jpg" alt="">
+        </div>
+      </div>
+    </div>
+
+  </section> -->
 
 
     <!-- Bootstrap Bundle with Popper -->
