--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#shop">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">News</a>
+                <a class="nav-link" href="#news">News</a>
               </li>
               <li class="nav-item pb-sm-3">
                 <a class="nav-link" href="#">Contact Us</a>
@@ -119,7 +119,12 @@
 
 
 
-
+<!-- Latest News -->
+<section class="latest-news py-5" id="news">
+  <div class="section-title text-center">
+    <h1 class="fw-bold">Latest News</h1>
+  </div>
+</section>
 
 
 
