--- a/index.html
+++ b/index.html
@@ -331,6 +331,15 @@
 
 </section>
 
+<!-- FAQ Section -->
+<section class="faq-section">
+  <div class="section-title text-center">
+    <h1>Frequently Asked <span class="text-tomato">Questions</span></h1>
+  </div>
+  
+</section>
+
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
