faq some correction

--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
         <img width="495px" class="img-fluid" src="./images/faq.png" alt="...">
       </div>
     </div>
-    <div class="col-lg-6 d-flex align-items-center">
-      <div class="faq-content">
+    <div class="col-lg-6 p-5 mt-2">
+      <div class="faq-content ">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
