app acces added

--- a/index.html
+++ b/index.html
@@ -398,6 +398,46 @@
     </div>
   </div>
 </section>
+<!-- Contact -->
+<section class="contact bg-dark text-light fw-light p-5">
+  <div class="row container">
+    <div class="col-lg-6">
+      <div class="Acces d-flex">
+        <p >Download Now</p> 
+        <p class="px-3">Licence</p>
+      </div>
+      <div class="more d-flex justify-content-between">
+        <p>About</p>
+        <p>Features</p>
+        <p>Pricing</p>
+        <p>Careers </p>
+        <p>Help</p>
+        <p>Privacy Policy</p>
+      </div>
+     
+
+    </div>
+    <div class="col-lg-6 d-flex justify-content-lg-end">
+      <div>
+        <div class="app-title">
+          <h4>Get the App</h4>
+        </div>
+        <div class="apple-store d-flex border border-light align-items-center p-1 rounded my-3">
+          <i class="fa-brands fa-apple fs-1"></i>
+          <div class="apple-content px-2">
+            <h6>Donwnload on the <br><span class="fs-4 fw-bold">App Store</span> </h6>
+          </div>
+        </div>
+        <div class="google-store d-flex border border-light align-items-center p-1 rounded">
+          <i class="fa-brands fa-google-play fs-1"></i>
+          <div class="google-content px-2">
+            <h6>Get it on <br><span class="fs-4 fw-bold">Google Store</span> </h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
     <!-- Bootstrap Bundle with Popper -->
