--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   </div>
 </section>
 <!-- Contact -->
-<section class="contact bg-dark text-light fw-light p-5">
+<section class="contact bg-dark text-light fw-light px-5 pt-5">
   <div class="row container">
     <div class="col-lg-6">
       <div class="Acces d-flex">
@@ -431,11 +431,14 @@
         <div class="google-store d-flex border border-light align-items-center p-1 rounded">
           <i class="fa-brands fa-google-play fs-1"></i>
           <div class="google-content px-2">
-            <h6>Get it on <br><span class="fs-4 fw-bold">Google Store</span> </h6>
+            <h6>Get it on <br><span class="fs-5 fw-bold">Google Store</span> </h6>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="text-center pt-4 pb-1">
+    <p class="fs-5 fw-bold font-monospace">© 2022 Honda Bike. All rights reserved.</p>
   </div>
 </section>
 
