--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@
 <section class="contact bg-dark text-light fw-light px-5 pt-5">
   <div class="row container">
     <div class="col-lg-6">
-      <div class="Acces d-flex">
+      <div class="Acces d-lg-flex">
         <p >Download Now</p> 
-        <p class="px-3">Licence</p>
+        <p class="ps-lg-3">Licence</p>
       </div>
-      <div class="more d-flex justify-content-between">
+      <div class="more d-lg-flex justify-content-between">
         <p>About</p>
         <p>Features</p>
         <p>Pricing</p>
